# Encryption-using-Matrices

./: .gitignore  README.md  matric_encryption.py  pyproject.toml
