[project]
name = "testprogram"
version = "0.1.0"
description = ""
authors = [
    {name = "Muzasio", email = "219419675+Muzasio@users.noreply.github.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26"
sympy = "^1.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

